fix: Grid rows overlapping when using vertical gutter (#21518)
The clearfix was not enough when having columns of different heights because we have negative margin-top and margin-bottom on the grid rows when using vertical gutter. Instead of setting `clear: both` just for the `::after` pseudo-element, we should also set it for the `::before` one when we are dealing with an ant-row that was immediately preceded by another ant-row.

--- a/components/grid/style/index.less
+++ b/components/grid/style/index.less
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+.@{ant-prefix}-row + .@{ant-prefix}-row::before {
+  clear: both;
+}
+
 .@{ant-prefix}-row-flex {
   display: flex;
   flex-flow: row wrap;
